crates/lash-protocol-rlm/src/native/snapshots/lash_protocol_rlm__native__tests__native_schema_schema_mismatch.snap
---
source: crates/lash-protocol-rlm/src/native/tests.rs
expression: "serde_json::to_string_pretty(&request.messages).unwrap()"
---
[
  {
    "role": "Assistant",
    "blocks": [
      {
        "ToolCall": {
          "call_id": "provider-id",
          "tool_name": "execute_code",
          "input_json": "{\"code\":\"finish(1);\"}",
          "replay": {
            "item_id": "opaque-item",
            "opaque": "signature"
          }
        }
      }
    ]
  },
  {
    "role": "User",
    "blocks": [
      {
        "ToolResult": {
          "call_id": "provider-id",
          "content": [
            {
              "type": "text",
              "text": "1 is not of type \"string\"\n\nNext: the defect is in the program, not in what the runtime allows. Fix the cause named above, then send the corrected cell."
            }
          ],
          "tool_name": "execute_code"
        }
      }
    ]
  },
  {
    "role": "System",
    "blocks": [
      {
        "Text": {
          "text": "The `finish` value did not match the required output schema. Correct it and call `finish(value)` again.",
          "response_meta": null,
          "cache_breakpoint": true
        }
      }
    ]
  },
  {
    "role": "User",
    "blocks": [
      {
        "Text": {
          "text": "\n\n\n=== CURRENT ITERATION: 2 ===",
          "response_meta": null,
          "cache_breakpoint": false
        }
      }
    ]
  }
]
